# anyloop

./: error_after_filter.aylp  meson.build  sc20_cmd.aylp  sc20_resp.aylp
Bode_and_testruns/Outdated plots/: conf_biquad_loop.json  conf_latency_test.json
contrib/: ASICamera2.h  analyze_20hz.py  asi_source.c  atten_shortfsp.json  attenuation_fsp.json  attenuation_test.json  aylp_alsa.c  aylp_alsa.h  conf_alsa_lowlat.json  conf_alsa_smoke.json  conf_biquad_loop.json  conf_bode_soundcard_x.json  conf_bode_soundcard_y.json  conf_bode_x.json  conf_bode_x_gain.json  conf_bode_y.json  conf_bode_y_course.json  conf_bode_y_gain.json  conf_delay_multitone_soundcard.json  conf_delay_noise_soundcard.json  conf_determine_ychan.json  conf_latency_20hz.json  conf_latency_soundcard.json  conf_latency_test.json  conf_latency_y.json  conf_piplate_test.json  conf_piplate_test_coarse.json  find_avoid.py  find_roi.py  latency_5runs.sh  perf_mode.sh  play_tone.sh  probe_frame.json  soundcard_delay_NOTES.md  steering_fsp.json  steering_tuned.json  watch_error_ts.jl  watch_steering.jl  watch_udp_com.jl
devices/: attenuation_test.c  attenuation_test.h  biquad_filter.c  biquad_filter.h  bode_plot.c  bode_plot.h  center_of_mass.c  center_of_mass.h  device.h  fsp.c  fsp.h  kalman_filter.c  kalman_filter.h  kdc101.c  kdc101.h  latency_test.c  latency_test.h  pid.c  pid.h  piplate_bridge.c  piplate_bridge.h  test_source.c  test_source.h  tic_t834.c  tic_t834.h  udp_sink.c  udp_sink.h  udp_source.c  udp_source.h
doc/devices/: attenuation_test.md  biquad_filter.md  center_of_mass.md  fsp.md  kalman_filter.md  latency_test.md  pid.md  udp_sink.md
test/: fsp_wiener_bound.c
